--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.compose.material:material:1.1.0-rc01'
+
     implementation 'com.google.android.gms:play-services-location:19.0.0'
-    implementation 'com.karumi:dexter:6.2.2'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
     testImplementation 'junit:junit:4.+'
